Windows QPA: Fix mouse button reported in non-client events

The current mouse buttons state was being retrieved from WPARAM
for all mouse messages. However, for non-client messages this
parameter contains unrelated information, which resulted in
non-client events reporting incorrect button state. Changing it to
retrieve state using GetAsyncKeyState() for non-client messages,
like in the legacy mouse handler implementation.

Fixes: QTBUG-74649
Change-Id: Ia246164208707072e584dd521697e9d31d3e65ad
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>